--- a/static/style.css
+++ b/static/style.css
@@ -31,10 +31,10 @@ body {
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #28a745;
+    background-color: #4c00ff;
     color: #fff;
     cursor: pointer;
 }
 .container form button:hover {
-    background-color: #218838;
+    background-color: #4c00ff;
 }
